--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -13,7 +14,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ChangePassActivity"></activity>
+        <activity android:name=".XoaMonActivity"></activity>
+        <activity android:name=".SuaMonActivity" />
+        <activity android:name=".ThemMonActivity" />
+        <activity android:name=".ChangePassActivity" />
         <activity android:name=".KhachHangActivity" />
         <activity android:name=".XoaQuanActivity" />
         <activity android:name=".ThemQuanActivity" />
