--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,5 +33,10 @@ dependencies {
     implementation 'com.google.firebase:firebase-storage:16.0.1'
     implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'com.rengwuxian.materialedittext:library:2.1.4'
+    implementation 'com.android.support:design:28.0.0'
+    implementation 'com.cepheuen.elegant-number-button:lib:1.0.2' // button số lượng
+    implementation 'com.firebaseui:firebase-ui-database:1.2.0'
+    implementation 'com.android.support:cardview-v7:28.0.0'
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
 }
 apply plugin: 'com.google.gms.google-services'
