--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,10 +14,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".FoodDetailActivity"></activity>
         <activity
-            android:name=".TestActivity"
+            android:name=".KhachHangActivity"
             android:label="@string/title_activity_test"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".InfoPersonActivity" />
         <activity android:name=".SearchFood" />
         <activity android:name=".XemDSMonActivity" />
@@ -25,7 +26,6 @@
         <activity android:name=".SuaMonActivity" />
         <activity android:name=".ThemMonActivity" />
         <activity android:name=".ChangePassActivity" />
-        <activity android:name=".KhachHangActivity" />
         <activity android:name=".XoaQuanActivity" />
         <activity android:name=".ThemQuanActivity" />
         <activity android:name=".AdminActivity" />
