--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".CartActivity"></activity>
+        <activity android:name=".QuanAnXemDSDonDatHang"></activity>
+        <activity android:name=".CartActivity" />
         <activity android:name=".FoodDetailActivity" />
         <activity
             android:name=".KhachHangActivity"
