--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".QuanAnXemDSDonDatHang"></activity>
+        <activity android:name=".ForgotPassActivity"></activity>
+        <activity android:name=".QuanAnXemDSDonDatHang" />
         <activity android:name=".CartActivity" />
         <activity android:name=".FoodDetailActivity" />
         <activity
@@ -22,7 +23,7 @@
             android:label="@string/title_activity_test"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".InfoPersonActivity" />
-        <activity android:name=".SearchFood" />
+        <activity android:name=".SearchFoodActivity" />
         <activity android:name=".XemDSMonActivity" />
         <activity android:name=".XoaMonActivity" />
         <activity android:name=".SuaMonActivity" />
