--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ForgotPassActivity"></activity>
+        <activity android:name=".DetailOrder"></activity>
+        <activity
+            android:name=".RestaurentActivity"
+            android:label="@string/title_activity_restaurent"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".ForgotPassActivity" />
         <activity android:name=".QuanAnXemDSDonDatHang" />
         <activity android:name=".CartActivity" />
         <activity android:name=".FoodDetailActivity" />
