--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,5 +56,8 @@ dependencies {
     //Font
     implementation 'uk.co.chrisjenx:calligraphy:2.3.0'
 
+    // counterFAB
+    implementation 'com.github.andremion:counterfab:1.0.1'
+
 }
 apply plugin: 'com.google.gms.google-services'
