--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,5 +59,8 @@ dependencies {
     // counterFAB
     implementation 'com.github.andremion:counterfab:1.0.1'
 
+    //spotsdialog
+    implementation 'com.github.d-max:spots-dialog:1.1@aar'
+
 }
 apply plugin: 'com.google.gms.google-services'
