--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,5 +62,10 @@ dependencies {
     //spotsdialog
     implementation 'com.github.d-max:spots-dialog:1.1@aar'
 
+    //notification
+    implementation "com.android.support:support-compat:28.0.0"
+
+    implementation 'com.google.firebase:firebase-messaging:17.0.0'
+
 }
 apply plugin: 'com.google.gms.google-services'
