--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,15 +35,13 @@
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".InfoPersonActivity" />
         <activity android:name=".SearchFoodActivity" />
-        <activity android:name=".XemDSMonActivity" />
-        <activity android:name=".XoaMonActivity" />
-        <activity android:name=".SuaMonActivity" />
-        <activity android:name=".ThemMonActivity" />
+        <activity android:name=".ViewListFoodActivity" />
+        <activity android:name=".AddFoodActivity" />
         <activity android:name=".ChangePassActivity" />
-        <activity android:name=".XoaQuanActivity" />
-        <activity android:name=".ThemQuanActivity" />
+        <activity android:name=".RemoveRestaurantActivity" />
+        <activity android:name=".AddRestaurantActivity" />
         <activity android:name=".AdminActivity" />
-        <activity android:name=".QuanAnActivity" />
+        <activity android:name=".RestaurantActivity" />
         <activity android:name=".RegisterActivity" />
         <activity android:name=".LoginActivity" />
         <activity android:name=".WelcomActivity">
